--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
                 "openai-php/client": "^0.10.3",
                 "phpoffice/phpword": "^1.3",
                 "spatie/laravel-activitylog": "^4.9",
-                "spatie/laravel-permission": "^6.16"
+                "spatie/laravel-permission": "^6.16",
+                "yajra/laravel-datatables-oracle": "^11.1"
         },
         "require-dev": {
             "fakerphp/faker": "^1.23",
